fixing progress states

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" class="h-full bg-gray-100">
     <head>
-        <title>My app</title>
+        <title>Stable Diffusion</title>
         <meta charset="utf-8" />
     </head>
     <body id="target" class="h-full">
